upd: learning basically works

--- a/learn/index.html
+++ b/learn/index.html
@@ -6,10 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <label>
+    <label style="user-select: none;">
         <input type="checkbox" id="order-input" />
         Order
     </label>
+    <button id="btn-next">Next</button>
     <div id="main">
         
     </div>
