--- a/test/index.html
+++ b/test/index.html
@@ -12,6 +12,7 @@
     </div>
     <input type="text" id="input" />
 
+    <script src="../common.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
