upd: learning design, window key

--- a/learn/index.html
+++ b/learn/index.html
@@ -4,17 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Learn English</title>
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <label style="user-select: none;">
+    <label id="order-label">
         <input type="checkbox" id="order-input" />
         Order
     </label>
-    <button id="btn-next">Next</button>
     <div id="main">
-        
+        <div id="card">
+            <div class="english">
+
+            </div>
+            <div class="transcription">
+
+            </div>
+            <div class="pronunciation">
+
+            </div>
+            <div class="russian">
+
+            </div>
+            <div class="ukrainian">
+
+            </div>
+        </div>
     </div>
+
+    <button id="btn-next">Next</button>
 
     <script src="../common.js"></script>
     <script src="app.js"></script>
