--- a/learn/index.html
+++ b/learn/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+    <div id="dataset-name"></div>
     <label id="order-label">
         <input type="checkbox" id="order-input" />
         Order
