--- a/test/index.html
+++ b/test/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
+    <div id="dataset-name"></div>
     <button id="btn-next">Next</button>
     <div id="main">
         
