--- a/test/index.html
+++ b/test/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test English</title>
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <div id="dataset-name"></div>
-    <button id="btn-next">Next</button>
     <div id="main">
         
     </div>
     <input type="text" id="input" />
+    <button id="btn-next">Next</button>
 
     <script src="../common.js"></script>
     <script src="app.js"></script>
