--- a/test/index.html
+++ b/test/index.html
@@ -14,6 +14,12 @@
     <input type="text" id="input" />
     <button id="btn-next">Next</button>
 
+    <div id="blur" class="hidden">
+        <div class="info">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, nihil.
+        </div>
+    </div>
+
     <script src="../common.js"></script>
     <script src="app.js"></script>
 </body>
